@@ -3,7 +3,7 @@
 TOPDIR	= ../..
 DFILES	= Makefile config.h.in xmp.h xmpi.h effects.h period.h driver.h \
 	  mixer.h xxm.h getopt.h formats.h convert.h list.h readhuff.h \
-	  readrle.h readlzw.h
+	  readrle.h readlzw.h loader.h
 DDIRS	=
 CFILES	=
 DCFILES	= config.h
