@@ -1,7 +1,7 @@
 /* Extended Module Player
  * Copyright (C) 1996-2007 Claudio Matsuoka and Hipolito Carraro Jr
  *
- * $Id: load.c,v 1.26 2007-10-06 14:35:19 cmatsuoka Exp $
+ * $Id: load.c,v 1.27 2007-10-08 16:38:29 cmatsuoka Exp $
  *
  * This file is part of the Extended Module Player and is distributed
  * under the terms of the GNU General Public License. See doc/COPYING
@@ -22,6 +22,7 @@
 #include <unistd.h>
 #include "driver.h"
 #include "convert.h"
+#include "loader.h"
 
 #include "list.h"
 #include "../prowizard/prowiz.h"
